<resources>
    <string name="app_name">TP-LINK Manager</string>
    <string name="set_host">Set Host</string>
    <string name="login">Login</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="auto_login">Auto Login</string>
    <string name="change_host">Change Host</string>
    <string name="tab_state">State</string>
    <string name="tab_setting">Settings</string>
    <string name="tab_widget">Widget</string>
    <string name="tab_lan">LAN</string>
    <string name="log_out">Logout</string>
    <string name="message">Message</string>
    <string name="reboot">Reboot</string>
    <string name="change_password">Change Password</string>
    <string name="about">About</string>
    <string name="about_developer">Developers</string>
    <string name="feedback">FeedBack</string>
    <string name="about_open_source">Open Source Licenses</string>
    <string name="router_led">Router LED</string>
    <string name="hardware_nat">Hardware NAT</string>
    <string name="ipv6">IPV6</string>
    <string name="DHCP">DHCP</string>
    <string name="wifi">WiFi</string>
    <string name="network">Network</string>
    <string name="advance">Advance</string>
    <string name="close">Close</string>
</resources>