<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/app_name">
        <Preference
            android:icon="@drawable/outline_language_24"
            android:key="network"
            android:title="@string/network" />
        <Preference
            android:icon="@drawable/outline_wifi_24"
            android:key="wifi"
            android:title="@string/wifi" />
        <Preference
            android:icon="@drawable/lan"
            android:key="lan"
            android:title="@string/tab_lan" />
        <Preference
            android:icon="@drawable/dhcp"
            android:key="dhcp"
            android:title="@string/DHCP" />
        <Preference
            android:icon="@drawable/ipv6"
            android:key="ipv6"
            android:title="@string/ipv6" />
        <Preference
            android:icon="@drawable/nat"
            android:key="nat"
            android:title="@string/hardware_nat" />
        <Preference
            android:icon="@drawable/outline_tungsten_24"
            android:key="led"
            android:title="@string/router_led" />
        <Preference
            android:icon="@drawable/outline_password_24"
            android:key="changePwd"
            android:title="@string/change_password" />
        <Preference
            android:icon="@drawable/outline_restart_alt_24"
            android:key="reboot"
            android:title="@string/reboot" />
        <SwitchPreferenceCompat
            android:icon="@drawable/outline_login_24"
            android:key="autoLogin"
            android:title="@string/auto_login" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about">
        <Preference
            android:icon="@drawable/outline_router_24"
            android:key="about"
            android:title="@string/app_name" />
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>